fixed overflow on centerpopup.  added condition on page initialize to create a new variable setting the maximum height of the popups to the height of the main area

--- a/Termstile/style.css
+++ b/Termstile/style.css
@@ -440,6 +440,7 @@ border:0;
 	z-index:2;  
 	padding:12px;  
 	font-size:13px; 
+	overflow:auto;
 }
 .popup h1{
 	text-align:center;
